// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config injects environment variables 1`] = `
{
  "BAZ": "QUX",
  "FOO": "bar",
}
`;

exports[`config injects environment variables 2`] = `
[
  [
    "development-item",
    {
      "account": undefined,
      "vault": undefined,
    },
  ],
]
`;

exports[`config injects environment variables 3`] = `
{
  "BAZ": "QUX",
  "FOO": "bar",
}
`;

exports[`config injects environment variables 4`] = `
[
  [
    "development-item",
    {
      "account": undefined,
      "vault": undefined,
    },
  ],
]
`;

exports[`config injects environment variables 5`] = `
{
  "BAZ": "QUX",
  "FOO": "bar",
}
`;

exports[`config injects environment variables 6`] = `
[
  [
    "production-item",
    {
      "account": undefined,
      "vault": undefined,
    },
  ],
]
`;

exports[`config injects environment variables 7`] = `
{
  "BAZ": "QUX",
  "FOO": "bar",
}
`;

exports[`config injects environment variables 8`] = `
[
  [
    "development-item",
    {
      "account": undefined,
      "vault": "vault-name",
    },
  ],
]
`;

exports[`config injects environment variables 9`] = `
{
  "BAZ": "QUX",
  "FOO": "bar",
}
`;

exports[`config injects environment variables 10`] = `
[
  [
    "development-item",
    {
      "account": "account-name",
      "vault": undefined,
    },
  ],
]
`;

exports[`config injects environment variables 11`] = `
{
  "BAZ": "QUX",
  "FOO": "bar",
}
`;

exports[`config injects environment variables 12`] = `
[
  [
    "development-item",
    {
      "account": "account-name",
      "vault": "vault-name",
    },
  ],
]
`;

exports[`config injects environment variables 13`] = `
{
  "BAZ": "QUX",
  "FOO": "bar",
}
`;

exports[`config injects environment variables 14`] = `
[
  [
    "arbitrary-item",
    {
      "account": undefined,
      "vault": undefined,
    },
  ],
]
`;

exports[`config injects environment variables 15`] = `{}`;

exports[`config injects environment variables 16`] = `[]`;

exports[`config injects environment variables 17`] = `{}`;

exports[`config injects environment variables 18`] = `[]`;

exports[`config uses the ENVLOCKER_ENV_NAME environment variable 1`] = `
[
  [
    "the staging item name",
    {
      "account": undefined,
      "vault": undefined,
    },
  ],
]
`;

exports[`createItemFromEnvFile creates an item in 1password from a .env file 1`] = `
[
  [
    [
      [
        "FOO",
        "concealed",
        "bar",
      ],
      [
        "BAZ",
        "concealed",
        "QUX",
      ],
    ],
    {
      "account": undefined,
      "category": "Server",
      "title": "new-app",
      "vault": "env-vars",
    },
  ],
]
`;

exports[`createItemFromEnvFile creates an item in 1password from a .env file 2`] = `
[
  [
    [
      [
        "FOO",
        "concealed",
        "bar",
      ],
      [
        "BAZ",
        "concealed",
        "QUX",
      ],
    ],
    {
      "account": "my.1password.com",
      "category": "Server",
      "title": "new-app",
      "vault": "env-vars",
    },
  ],
]
`;

exports[`createItemFromEnvFile creates an item in 1password from a .env file 3`] = `
[
  [
    [
      [
        "FOO",
        "concealed",
        "bar",
      ],
      [
        "BAZ",
        "concealed",
        "QUX",
      ],
    ],
    {
      "account": undefined,
      "category": "Login",
      "title": "new-app",
      "vault": "env-vars",
    },
  ],
]
`;

exports[`createItemFromEnvFile creates an item in 1password from a .env file 4`] = `
[
  [
    [
      [
        "FOO",
        "concealed",
        "bar",
      ],
      [
        "BAZ",
        "concealed",
        "QUX",
      ],
    ],
    {
      "account": "my.1password.com",
      "category": "Login",
      "title": "new-app",
      "vault": "env-vars",
    },
  ],
]
`;
